Name:           dissemina2
Version:        0.1.0
Cabal-Version:  >= 1.8
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/dissemina2
Category:       System, Control, Network
Synopsis:       Experiments in writing a fast fileserver
Build-Type:     Simple
Description:
        See the @README.md@ file and the homepage for details.

Extra-Source-Files:     Makefile, Utils.hs, Test/SimpleRequestTest.hs

Data-Files:             README.md, LICENSE

Source-repository head
  Type:                 git
  Location:             https://github.com/scvalex/dissemina2.git

Executable dissemina2-naive
  Build-depends:        base >= 4 && < 5, bytestring, network
  Main-Is:              Naive.hs
  Ghc-options:          -Wall -threaded

Executable dissemina2-sendfile
  Build-depends:        base >= 4 && < 5, bytestring, network, sendfile
  Main-Is:              SendFile.hs
  Ghc-options:          -Wall -threaded

Executable dissemina2-cached
  Build-depends:        base >= 4 && < 5, bytestring, containers, mmap, network
  Main-Is:              Cached.hs
  Ghc-options:          -Wall -threaded

Test-suite naive
  Hs-Source-Dirs:       Test, .
  Main-Is:              TestNaive.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5, bytestring, HTTP, network
  Ghc-Options:          -Wall -threaded

  Build-Depends:        test-framework, test-framework-hunit, HUnit

Test-suite sendfile
  Hs-Source-Dirs:       Test, .
  Main-Is:              TestSendFile.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5, bytestring, HTTP, network, sendfile
  Ghc-Options:          -Wall -threaded

  Build-Depends:        test-framework, test-framework-hunit, HUnit

Test-suite cached
  Hs-Source-Dirs:       Test, .
  Main-Is:              TestCached.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base >= 4 && < 5, bytestring, containers, HTTP, mmap, network
  Ghc-Options:          -Wall -threaded

  Build-Depends:        test-framework, test-framework-hunit, HUnit
